# owl-ocr

./: .gitignore  README.md  functional_api.py  main.py  ocr_gui.py  ocr_streamlit.py  pyproject.toml  run_api.py  run_server.py  simple_api.py  test_api.py
api/: main.py
api/middleware/: security.py
api/models/: requests.py  responses.py
api/routers/: __init__.py  jobs.py  process.py
src/jobs/: queue.py  worker.py
src/utils/: parse_image.py  parse_pdf.py  parse_pptx.py
static/: style.css
